Etapa2/src/Exe3/TradutorDeExpressoesInfixasEmPosfixas.java
/* Generated By:JavaCC: Do not edit this line. TradutorDeExpressoesInfixasEmPosfixas.java */
package Exe3;
import java.io.*;

public class TradutorDeExpressoesInfixasEmPosfixas implements TradutorDeExpressoesInfixasEmPosfixasConstants {
  public static void main(String args []) throws ParseException
  {
    TradutorDeExpressoesInfixasEmPosfixas analisador = null;
    try
    {
      analisador = new TradutorDeExpressoesInfixasEmPosfixas(new FileInputStream("prog_fonte.my"));
      analisador.inicio();
    }
    catch (FileNotFoundException e)
    {
      System.out.println("Erro: arquivo n\u00e3o encontrado");
    }
    catch (TokenMgrError e)
    {
      System.out.println("Erro l\u00e9xico\u005cn" + e.getMessage());
    }
    catch (ParseException e)
    {
      System.out.println("Erro sint\u00e1tico\u005cn" + e.getMessage());
    }
  }

  static final public void inicio() throws ParseException {
    expressao();
    jj_consume_token(0);
  }

  static final public void expressao() throws ParseException {
  Token t;
    termo();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADICAO:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = jj_consume_token(ADICAO);
      termo();
      System.out.print(t.image + " ");
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUBTRACAO:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      t = jj_consume_token(SUBTRACAO);
      termo();
      System.out.print(t.image + " ");
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      t = jj_consume_token(MULTIPLICACAO);
      termo();
      System.out.print(t.image + " ");
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIVISAO:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      t = jj_consume_token(DIVISAO);
      termo();
      System.out.print(t.image + " ");
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODULO:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      t = jj_consume_token(MODULO);
      termo();
      System.out.print(t.image + " ");
    }
  }

  static final public void termo() throws ParseException {
  Token t;
    fator();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADICAO:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      t = jj_consume_token(ADICAO);
      fator();
      System.out.print(t.image + " ");
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUBTRACAO:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      t = jj_consume_token(SUBTRACAO);
      fator();
      System.out.print(t.image + " ");
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_8;
      }
      t = jj_consume_token(MULTIPLICACAO);
      fator();
      System.out.print(t.image + " ");
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIVISAO:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_9;
      }
      t = jj_consume_token(DIVISAO);
      fator();
      System.out.print(t.image + " ");
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODULO:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_10;
      }
      t = jj_consume_token(MODULO);
      fator();
      System.out.print(t.image + " ");
    }
  }

  static final public void fator() throws ParseException {
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NATURAIS:
    case ADICAO:
    case SUBTRACAO:
    case MULTIPLICACAO:
    case DIVISAO:
    case MODULO:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADICAO:
        t = jj_consume_token(ADICAO);
      System.out.print(t.image);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SUBTRACAO:
        t = jj_consume_token(SUBTRACAO);
      System.out.print(t.image + " ");
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLICACAO:
        t = jj_consume_token(MULTIPLICACAO);
      System.out.print(t.image + " ");
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIVISAO:
        t = jj_consume_token(DIVISAO);
      System.out.print(t.image + " ");
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MODULO:
        t = jj_consume_token(MODULO);
      System.out.print(t.image + " ");
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      t = jj_consume_token(NATURAIS);
    System.out.print(t.image + " ");
      break;
    case VARIAVEL:
      t = jj_consume_token(VARIAVEL);
    System.out.print(t.image + " ");
      break;
    case ABRE_PARENTESES:
      jj_consume_token(ABRE_PARENTESES);
      expressao();
      jj_consume_token(FECHA_PARENTESES);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public TradutorDeExpressoesInfixasEmPosfixasTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[16];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x80000,0x100000,0x200000,0x400000,0x800000,0x80000,0x100000,0x200000,0x400000,0x800000,0x80000,0x100000,0x200000,0x400000,0x800000,0xfa1400,};
   }

  /** Constructor with InputStream. */
  public TradutorDeExpressoesInfixasEmPosfixas(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public TradutorDeExpressoesInfixasEmPosfixas(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new TradutorDeExpressoesInfixasEmPosfixasTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public TradutorDeExpressoesInfixasEmPosfixas(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new TradutorDeExpressoesInfixasEmPosfixasTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public TradutorDeExpressoesInfixasEmPosfixas(TradutorDeExpressoesInfixasEmPosfixasTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(TradutorDeExpressoesInfixasEmPosfixasTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 16; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[25];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 16; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 25; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
